# mesob

./: .air.toml  .commitlintrc.json  .gitignore  Dockerfile.go.dev  Makefile  README.md  docker-compose.yml  go.work  go.work.dev  go.work.sum
ai/fraud/: Dockerfile  README.md  pyproject.toml
ai/fraud/app/: main.py
ai/fraud/app/api/: models.py  routes.py
ai/fraud/app/domain/: anomaly.py  rules.py  screener.py
ai/fraud/app/infra/: config.py  db.py  redis_store.py
ai/fraud/tests/: test_rules.py
ai/scoring/: Dockerfile  README.md  pyproject.toml
ai/scoring/app/: main.py
ai/scoring/app/api/: models.py  routes.py
ai/scoring/app/consumers/: iqub.py  labels.py  transaction.py
ai/scoring/app/domain/: fallback.py  scorecard.py  tiers.py
ai/scoring/app/features/: batch.py  definitions.py  online.py
ai/scoring/app/infra/: config.py  db.py  redis_store.py
ai/scoring/app/models/: explainer.py  registry.py
ai/scoring/tests/: test_scorecard.py
ai/scoring/training/: evaluate.py  register.py  train.py
docs/: openapi-combined.yaml  swagger-initializer.js
docs/adr/: 0001-ledger-as-own-service.md  0002-grpc-internal-rest-edge.md  0003-transactional-outbox.md  0004-server-authoritative-offline-sync.md  0005-partition-before-sharding.md  0006-jwt-stateless-plus-opaque-refresh.md  0007-token-family-reuse-detection.md
docs/runbooks/: adding-a-partner-adapter.md  local-dev.md
infra/db/: 00-create-databases.sh  01-init-identity.sql  02-init-ledger.sql  03-init-iqub.sql  04-init-iddir.sql  05-init-agent.sql  06-init-loans.sql  (+7 more)
mobile/: README.md  package.json
(+384 files in other folders)
